--- a/style.css
+++ b/style.css
@@ -386,19 +386,20 @@ main {
     font-family: "Roboto Mono", monospace;
 }
 .contact-info p{
+    padding: 5px;
     text-align: justify;
+}
+.contact-info ul{
+    padding: 0 0;
 }
 .info-item{
     display: flex;
     align-items: center;
     gap: 20px;
-    margin: 20px 0;
 }
-.info-item ul{
-    list-style: none;
-    padding: 8px 0px;
+.info-item p{
+    margin: 5px;
 }
-
 .reservation-form form {
     display: grid;
     padding: 20px;
@@ -591,7 +592,7 @@ footer p{
     .info-item{
         margin: 5px 0;
     }
-    .info-item ul{
+    .contact-info ul{
         list-style: none;
         padding: 0;
     }
@@ -741,7 +742,7 @@ footer p{
     .info-item{
         margin: 5px 0;
     }
-    .info-item ul{
+    .contact-info ul{
         list-style: none;
         padding: 0;
     }
